--- a/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
+++ b/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
@@ -335,16 +335,6 @@ h4 {
   padding: 1rem;
 }
 
-.stic-tablecard-start {
-  border-top-width: 3px !important;
-  border-right-width: 3px !important;
-  border-bottom-width: 0px !important;
-  border-left-width: 3px !important;
-}
-
-.stic-tablecard-end {
-  border-top-width: 0px !important;
-  border-right-width: 3px !important;
-  border-bottom-width: 3px !important;
-  border-left-width: 3px !important;
+.stic-tablecard {
+  border-width: 3px !important;
 }
