Enhance wizard functionality: add action editor management, improve action handling, and update UI elements for better user experience.

--- a/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
+++ b/modules/stic_Advanced_Web_Forms/custom_views/css/sticControls.css
@@ -338,3 +338,11 @@ h4 {
 .stic-tablecard {
   border-width: 3px !important;
 }
+
+.stic_panel .btn:hover {
+    padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
+}
+
+.stic_panel .accordion-button:hover {
+  padding: var(--bs-accordion-btn-padding-y) var(--bs-accordion-btn-padding-x);
+}
