Esquema de maquetación en wizard y clases necesarias. Motor generación html básico

--- a/themes/SuiteP/css/SticCustom/CustomPalette.scss
+++ b/themes/SuiteP/css/SticCustom/CustomPalette.scss
@@ -1,4 +1,7 @@
-$stic-base: #b5bc31;
+
+$stic-base: #eea82f;
 $stic-dark: darken($stic-base, 7%);
 $stic-light: lighten($stic-base, 7%);
 $stic-superlight: lighten($stic-base, 35%);
+$stic-sidebar: #D9DEE3;
+$stic-sidebar-text: #001E40;
